# reachy-mini-cooking-assistant

./: CONTRIBUTING.md  LICENSE  README.md  README2.md  SETUP.md  THIRD-PARTY-NOTICES.md  main.py  pyproject.toml  requirements.txt  run_cooking_assistant.py  run_llama_cpp.sh  run_llama_embedding.sh  run_vision_chat.py  run_voice_chat.py  run_web_vision_chat.py  test_vlm_prompts.py
app/: __init__.py  audio.py  camera.py  cli.py  config.py  emotion.py  llm.py  monitor.py  movements.py  pipeline.py  rag.py  reachy.py  stt.py  tts.py  tts_worker.py  web.py
config/: settings.yaml
scripts/: bench_ttft.py  test_reachy_movement.py  test_vlm_prompts.py
static/: cooking.html  index.html
